--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -12,7 +12,7 @@ This is my final attempt. If this doesn't help me get my business into the profi
 
 ## Long version
 
-I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after a few months. At that time I wanted to provide Software for the automation industry, but my plans were to implement my own proprietary software stack for industrial communication, which only I could use to build custom solutions (This being my USP). However, I noticed quickly that this is a huge undertaking - nothing a single person could possibly implement all on his own. I finally decided to take a full employment position.
+I started working on what was to become Apache PLC4X about 10 years ago (way before Industry 4.0 was a thing), but I gave up on it temporarily after a few months. At that time I wanted to provide Software for the automation industry, but my plans were to implement my own proprietary software stack for industrial communication, which only I could use to build custom solutions (This being my USP). However, I noticed quickly that this is a huge undertaking - nothing a single person could possibly implement all on his own. I finally decided to take a full employment position and give up on this idea.
 
 About 5 years later all of this "Industry 4.0" was popping up everywhere. I was seeing a big opportunity for making production more efficient, wasting less resources and even making products live longer.
 
@@ -20,47 +20,47 @@ Unfortunately, I was only seeing super expensive solutions provided by the major
 
 However, I knew open source had all the tools needed for digitizing automation processes. If there only was a way to access the data on the production machinery.
 
-Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed (from a business perspective) open-source libraries or commercial libraries with average price-tags of 4k€ per node running a driver. This was when I remembered what I had been working on 5 years before. However, this time I didn't want to do it all on my own, I wanted to do it the open-source way.
+Industrial automation was and still is using a huge number of specialized protocols for which there were only some badly licensed open-source libraries (from a business perspective) or commercial libraries with average price-tags of 4k€ per node running a driver. This was when I remembered what I had been working on 5 years before. However, this time I didn't want to do it all on my own, I wanted to do it the open-source way.
 
-Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for about 3,5 years. It was the general idea to earn money with training and consulting in this area, based in the open-source expertise that was available in the company (Industrial connectivity, big-data, machine-learning, augmented-/virtual-reality, digitization in general.
+Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for about 3,5 years. It was the general idea to earn money with training and consulting in this area, based on the open-source expertise that was available in the company (Industrial connectivity, big-data, machine-learning, augmented-/virtual-reality, digitization in general).
 
-Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry market. Every POC we did was a huge success. Here I'm not talking about achieving the goal, it was more: exceeding the customer's expectations by light-years: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the established solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more in license costs and allowed only 10k data-points with a latency of a few minutes.
+Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry market. Every POC we did was a huge success. Here I'm not talking about simply achieving the goal, it was more: exceeding the customer's expectations by light-years: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the commercial solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more per machine in license costs and allowed only 10k data-points with a latency of a few minutes.
 
-I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I had an average of 26 talks per year at different national and international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
+I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I had an average of 26 talks per year at different national and international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups and conferences I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
 
 We still failed miserably: On the one side there's no point in convincing the IT folks that what you've got to offer is awesome, if the OT folks don't know about it. And everything in the OT world is pay-to-play. You'll never get an article posted in an OT magazine, if you don't pay for it. In the OT world there are also no conferences, like in the IT world. Everything is about industrial fairs with extremely expensive booths. The budgets the big players have at their disposal are simply unbelievable. As an open-source project you have no chance to be noticed at all.
 
-We also failed at getting customers to go beyond our incredibly successful POCs. I'll write a separate article on this. What we were told off the record was in every case things didn't proceed due to politics.
+We also failed at getting customers to go beyond our incredibly successful POCs. I'll write a separate article on this. What we were told off the record was in every case things didn't proceed due to politics and not our performance.
 
-To make things worse, due to the NDA's we had to sign everywhere, we couldn't even openly talk about our success. Everything in the automation industry is considered top-secret, even simply telling the world that you're using a given solution seems to be impossible.
+To make things worse, due to the NDA's we had to sign everywhere, we couldn't even openly talk about our success. Everything in the automation industry is considered top-secret, even simply telling the world that you're using a given product seems to be impossible.
 
-Most requests for help on our mailing-list were like: “So we're using your super cool PLC4X in one of our countries biggest {steel melting plants}/{aerospace companies}/{car manufacturers}/{pharmazeutical companies}/... and have this problem … “ sent from email addresses like: john.doe@googlemail.com. They all wanted help. Help for free and didn't even have the decency of mentioning what company they were working for. And I was so stupid to give them exactly what they needed.
+Ironically most requests for help on our mailing-list were like: “So we're using your super cool PLC4X in one of our countries biggest {steel melting plants}/{aerospace companies}/{car manufacturers}/{pharmazeutical companies}/... and have this problem … “ sent from email addresses like: john.doe@googlemail.com. They all wanted help. Help for free and didn't even have the decency of mentioning what company they were working for. And I was so stupid to give them exactly what they needed.
 
-So, in 2020 (I know … this was a pretty “sub-optimal” year all together) I had to decide. Was I going to give up on PLC4X or give up my Job at codecentric. So, I gave up the job and was planning on living from consulting gigs for industrial open-source, which I still strongly believed in. Things didn't look that bad in the second half of 2020. Luckily, I was able to get financing from NLNet to continue working on PLC4C from March till Oktober 2020.
+So, in 2020 (I know … this was a pretty “sub-optimal” year all together) I had to decide. Was I going to have give up on PLC4X or give up my Job at codecentric. So, I gave up the job and was planning on living from consulting gigs for industrial open-source, which I still strongly believed in. Things didn't look that bad in the second half of 2020. Luckily in that year, I was able to get financing from NLNet from European research funds to continue working on PLC4C from March till Oktober 2020.
 
 Unfortunately, Covid didn't go away and after a few months of positive numbers the next wave hit the world and all the companies that were starting to open their purses, instantly closed them again.
 
-Luckily for the both of us, at that time Shaun from Mapped approached me as he was looking for folks able to help communicate with building automation systems. I was happy to join, however I insisted on being able to continue running my business as a side-thing (as long as it has no impact on my work for Mapped). I knew: If there's no place a company could get commercial consulting from, I could probably just bury the project.
+Luckily for the both of us, at that time Shaun from Mapped approached me, as he was looking for folks able to help communicate with building automation systems. I was happy to join, however I insisted on being able to continue running my business as a side-thing (as long as it has no impact on my work for Mapped). Because I knew: If there's no place a company could get commercial consulting from, I could probably just bury the project.
 
 So since then, I have been working hard on the parts of PLC4X which we needed for our work at Mapped. These were mainly porting PLC4X to Go and working on drivers and auto-discovery used in building automation systems, but not on anything considered "community-work".
 
 At Apache, we know community is the hardest but also the most important part. So, after working times, on weekends and even on most of my holidays, I kept on pushing the open-source project, writing reports, doing releases, mentoring people showing interest, submitting and performing talks, providing fee community support, addressing security issues, doing normal project housekeeping. In general: Keeping the lights on.
 
-The problem now is: In Germany a company needs to be profitable. If you run your business at a deficit for too long, you get your business closed, and you're even forced to pay back a lot of taxes.
+In 2020 another problem came to the pre-existing ones: In Germany a company needs to be profitable. If you run your business at a deficit for too long, you get your business closed, and you're even forced to pay back a lot of taxes.
 
 As I have been focusing on PLC4X without getting many paid gigs, but I needed to pay a lot for purchasing hard and software, I have been running my (side-) business at a deficit for way too long now. I managed to convince the tax officials to give me a bit more time to become profitable (after all that's my goal).
 
 I think this year I managed to at least stay out of the red numbers, solely thanks to the Spanish company Zylk and the only paid gig I did in 2021. They hired me for implementing an open-source Profinet driver. In addition, I kept investments at an absolute minimum at the same time.
 
-Every year for the past years has ended the same way: In December many companies approach me, asking for offers for paid gigs which should start asap. Then I almost instantly get excuses for why this decision will have to be postponed to January next year. Then I never hear from them again. In this respect this year hasn't shown to be any different (Let's see if at least one potential customer reports back in January).
-
-However, this year one thing is different: I'm sick of fighting. I'm sick of investing my precious free time for others, burning up and not really getting anything back. I'm sick of how everything in the OT is pay-to-play and especially how everything in the OT is clearly communicating on a post-fact way. While in the past it was considered good to back your claims by facts, now it's just about spreading fake-news and the one being loudest, is going to be the winner. I'm not willing to play that game.
+However, at the end of this year, one thing is different: I'm sick of fighting. I'm sick of investing my precious free time for others, burning up and not really getting anything back. I'm sick of how everything in the OT is pay-to-play and especially how everything in the OT is clearly communicating on a post-fact way. While in the past it was considered good to back your claims by facts, now it's just about spreading fake-news and the one being loudest, is going to be the winner. I'm not willing to play that game.
 
 So I will probably shut my business down myself on first of April 2022 (which is 3 months before I would have been running that business without interruption for 25 years).
 
-As a last attempt to keep the lights on, I am switching the mode I am providing support for PLC4X: I am no longer implementing features users might need, I am no longer instantly fixing bugs for free on the weekend. I will continue help others fix and build stuff themselves and if I personally need something or want to try something out, I'll continue doing this. However, I will no longer port PLC4X to new languages, port drivers to new languages, implement new drivers or integration modules and most definitely not help companies with consulting, training and support for free.
+As a last attempt to keep the lights on, I am switching the mode I am providing support for PLC4X: I am no longer implementing features users might need, I am no longer instantly fixing bugs for free on the weekend. Especially I will not invest my private money to buy expensive hardware in order to implement stuff I am then giving away for free.
 
-For support, I always provided commercial support and will continue to do so. Same with consulting and training. But beyond that, I have set up a new section on my website, in which I list various things that have been asked for a lot in the past. This list can be extended on request. Each initiative has a price-tag. Companies liking to see one of these initiatives become a reality are free to back the campaigns in a crowdfunding-like fashion. As soon as the funding goal is reached, I will start working on it, not before.
+I will continue help others fix and build stuff themselves and if I personally need something or want to try something out, I'll continue doing this. However, I will no longer port PLC4X to new languages, port drivers to new languages, implement new drivers or integration modules and most definitely not help companies with consulting, training and support for free.
+
+For support, I always have offered commercial support, consulting and training and will continue to do so. Beyond that, I have even set up a new section on my website, in which I list various things that have been asked for a lot of times in the past. This list can be extended on request. Each of these tasks has a price-tag assigned to it. Companies liking to see one of these initiatives become a reality are free to back the campaigns in a crowdfunding-like fashion. As soon as the funding goal is reached, I will start working on it, not before.
 
 If the industry doesn't support the people behind open-source, I at least will from now on stop blindly supporting them for free.
 
