--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -24,6 +24,8 @@ Industrial automation was and still is using a huge number of specialized protoc
 
 Luckily my former employer: codecentric believed in my vision of enabling companies to digitize their processes using open source, and I was allowed to work fulltime on Apache PLC4X for about 3,5 years. It was the general idea to earn money with training and consulting in this area, based on the open-source expertise that was available in the company (Industrial connectivity, big-data, machine-learning, augmented-/virtual-reality, digitization in general).
 
+In Christian Glomb's talk (Siemens) at 2021s EclipseCon, he stated that over 50% of each industrial IoT projects costs are data-integration costs. This huge block is what Apache PLC4X aims at eliminating. So generally this hope was justified.
+
 Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry market. Every POC we did was a huge success. Here I'm not talking about simply achieving the goal, it was more: exceeding the customer's expectations by light-years: Like being able to save 180.000.000 € in license costs or being 1200 times more performant than the commercial solution. Providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100k€ and more per machine in license costs and allowed only 10k data-points with a latency of a few minutes.
 
 I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I had an average of 26 talks per year at different national and international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups and conferences I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
