--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -26,7 +26,7 @@ Luckily my former employer: codecentric believed in my vision of enabling compan
 
 In Christian Glomb's talk (Siemens) at 2021s EclipseCon, he stated that over 50% of each industrial IoT projects costs are data-integration costs. This huge block is what Apache PLC4X aims at reducing drastically. So generally this hope was justified.
 
-Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry market. Every POC we did was a huge success. Here I'm not talking about simply achieving the customer's goal, it was more: exceeding these expectations by light-years: Like being able to save 20.000.000€ in license costs, being 130 times more performant than the commercial solution, or providing 100% secure unlimited real-time data for machine learning where the fastest industrial solution cost 100.000€ and more per machine in license costs and allowed only 10k data-points with a latency of a few minutes. (See: the link:success-stories.adoc[success-stories] post for details)
+Unfortunately, we couldn't have imagined how hard it is to grab hold in the automation industry market. Every POC we did was a huge success. Here I'm not talking about simply achieving the customer's goal, it was more: exceeding these expectations by light-years: Like being able to save 20.000.000€ in license costs, being 130 times more performant than the commercial solution, or providing extremely secure unlimited real-time data for machine learning where the fastest industrial solution cost 100.000€ and more per machine in license costs and allowed only 10k data-points with a latency of a few minutes. (See: the link:success-stories.adoc[success-stories] post for details)
 
 I took every opportunity to talk at conferences, publish articles in magazines or write blog posts. I think in the pre-pandemic times I had an average of 26 talks per year at different national and international conferences and meetups. During pandemic times, the talks were less frequent, but I took every chance at talking at meetups and conferences I wouldn't have been able to talk at, if it was a presence meetup. IT folks were definitely picking up on the stuff I was talking about.
 
