--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -8,7 +8,9 @@ Working on Apache PLC4X is a huge amount of work and expensive as it requires pu
 
 You will be able to get commercial consulting, training and support via my website at https://c-ware.de and beyond that I have added a crowd-funding-like system for PLC4X feature development.
 
-This is my final attempt. If this doesn't help me get my business into the profitable zone till March 2022, I will close it down and there will be no further form of support from my side.
+Beyond that I'll be starting to implement commercial integration modules that allow using PLC4X in commercial industrial products. These modules will not be open-sourced and not be available for free.
+
+This is my final attempt. If this doesn't help me get my business into the profitable zone in 2022, I will close it down and there will be no further form of support from my side.
 
 ## Long version
 
@@ -34,6 +36,8 @@ I took every opportunity to talk at conferences, publish articles in magazines o
 
 We still failed miserably: On the one side there's no point in convincing the IT folks that what you've got to offer is awesome, if the OT folks don't know about it. The OT folks are the ones doing the decisions. Everything in the OT world is pay-to-play. You'll never get an article posted in an OT magazine, if you don't pay for it. In the OT world there are also no conferences, like in the IT world. Everything is about industrial fairs with extremely expensive booths. The budgets the big players have at their disposal are simply unbelievable. As an open-source project you have no chance of being noticed at all.
 
+You wouldn't believe how many requests from new commercial and non-commercial (but mostly commercial) IoT platforms I got. The number of new IoT platforms per 100.000 people per week some times fealt like being close to the current COVID infection numbers. All were talking about collaboration. In the end it always boiled down to: Me building an integration module for their platform for free and as a thank you I get the permission to sell their platform: Yay!
+
 We also failed at getting customers to go beyond our incredibly successful POCs. I'll write a separate article on this. What we were told off the record was, in every case things didn't proceed due to politics and not our performance.
 
 To make things worse, due to the NDA's we had to sign everywhere, we couldn't even openly talk about our success. Everything in the automation industry is considered top-secret, even simply telling the world that you're using a given product seems to be impossible. But on the other side, "Who uses your stuff?" was the most important question we were asked during every pitch we did. Answering with: "Quite a lot, but I'm not allowed to tell you who and how" doesn't really help.
@@ -58,7 +62,7 @@ I think this year I even managed to at least stay out of the red numbers, solely
 
 However, at the end of this year, one thing is different: I'm sick of fighting. I'm sick of investing my precious free time for others, burning up and not really getting anything back. I'm sick of how everything in the OT is pay-to-play and especially how everything in the OT is clearly communicating on a post-fact way. While in the past it was considered good to back your claims by facts, now it's just about spreading fake-news and the one being loudest, with the biggest marketing budget, is going to be the winner. I'm not willing to play that game.
 
-So I will probably shut my business down myself on first of April 2022 if till then I am not seeing any signed contracts that would make it profitable. Sadly this is 3 months before I would have been running that business without interruption for 25 years.
+So if things don't change in 2022 I have planned to shut down my business myself. Sadly this is also the year this business would have reached its 25-year anniversary.
 
 As a last attempt to keep the lights on, I am switching the mode I am providing support for PLC4X: I am no longer implementing features users might need, I am no longer instantly fixing bugs for free on the weekend. Especially I will not invest my private money to buy expensive hardware in order to implement or fix stuff I am then giving away for free.
 
@@ -67,5 +71,7 @@ I will continue help others fix and build stuff themselves and if I personally n
 For support, I always have offered commercial support, consulting and training and will continue to do so. Beyond that, I have even set up a new section on my website, in which I list various things that have been asked for a lot of times in the past. This list can be extended on request. Each of these tasks has a price-tag assigned to it. Companies liking to see one of these initiatives become a reality are free to back the campaigns in a crowdfunding-like fashion. As soon as the funding goal is reached, I will start working on it, not before.
 
 If the industry doesn't support the people behind open-source, I at least will from now on stop blindly supporting them for free.
+
+One thing I'll probably start doing, is writing paid commercial integration modules for IoT platforms with a commercial marketplace system. I'll probably make them available at competitive prices.
 
 You would do me a great favor, if you could share this with people you know who you think should read it ...
