--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -4,13 +4,13 @@ image::last-chance.jpg[]
 
 ## TL/DR
 
-Working on Apache PLC4X is a huge amount of work and expensive as it requires purchasing extremely expensive hard- and software. The industry seems to like using PLC4X and open-source in general, but doesn't seem to be willing to support the ones working on it. So, I will stop providing free community support for PLC4X.
+Working on Apache PLC4X is a huge amount of work and is expensive, as it requires purchasing expensive hard- and software. The industry seems to like using PLC4X and open-source in general, but doesn't seem to be willing to support the people working on it. So, I will stop providing free community support for PLC4X.
 
-You will be able to get commercial consulting, training and support via my website at https://c-ware.de and beyond that I have added a crowd-funding-like system for PLC4X feature development.
+You will be able to get commercial consulting, training and support via my website at https://c-ware.de and beyond that I have added a crowd-funding-like system for PLC4X feature development. Feel free to have a look at the currently listed initiatives here: https://c-ware.de/en/cf-listing-page/
 
 I'll also be starting to implement commercial integration modules that allow using PLC4X in commercial industrial products. These modules will not be open-sourced and not be available for free.
 
-This is my final attempt. If this also doesn't help at getting at least some form of financial attribution for my hard work, I will close down my business and there will be no further form of support from my side.
+This is my final attempt. If this also doesn't help with getting at least some form of financial attribution for my hard work, I will close down my business and there will be no further form of support from my side.
 
 ## Long version
 
