--- a/plc4x/free-trial-expired.adoc
+++ b/plc4x/free-trial-expired.adoc
@@ -42,7 +42,7 @@ We still failed miserably: On the one side there's no point in convincing the IT
 
 Ironically most requests for help on our mailing-list were like: “Thank you for providing this awesome PLC4X. It's making our lives so much easier. So we're using it in one of our countries biggest {steel melting plants}/{aerospace companies}/{car manufacturers}/{pharmazeutical companies}/... and have this problem … “ sent from email addresses like: john.doe@aol.com. They all wanted help. Help for free and didn't even have the decency of mentioning what company they were working for.
 
-So, in 2020 (I know … this was a pretty “sub-optimal” year all together) I had to decide. Was I going to do a decision: either give up on PLC4X or give up my Job at codecentric. I didn't really have to think and gave up the job and was planning on living from consulting gigs for industrial open-source, which I still strongly believed in. Things didn't look that bad in Q2 and Q3 of 2020. Luckily in that year, I was also able to get financing from NLNet from European research funds to continue working on PLC4X from March till Oktober 2020.
+So, in 2020 (I know … this was a pretty “sub-optimal” year all together) I had to decide. Either give up on PLC4X or give up my Job at codecentric. I didn't really have to think and gave up the job and was planning on living from consulting gigs for industrial open-source, which I still strongly believed in. Things didn't look that bad in Q2 and Q3 of 2020. Luckily in that year, I was also able to get financing from NLNet from European research funds to continue working on PLC4X from March till Oktober 2020.
 
 Unfortunately, Covid didn't go away and after a few months of positive numbers the next wave hit the world and all companies that were starting to open their purses, instantly closed them again.
 
